--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,6 @@ Repository = "https://github.com/bmad4ever/comfyui_lists_cartesian_product"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "bmad4ever"
 DisplayName = "comfyui_lists_cartesian_product"
 Icon = ""
